--- a/debian/control.in
+++ b/debian/control.in
@@ -2,9 +2,9 @@ Source: @PVER@
 Section: python
 Priority: optional
 Maintainer: Matthias Klose <doko@debian.org>
-Build-Depends: debhelper (>= 5), quilt, autoconf, libreadline-dev, libncursesw5-dev (>= 5.3), tk8.5-dev, zlib1g-dev, blt-dev (>= 2.4z), libssl-dev, libexpat1-dev, sharutils, libbz2-dev, libbluetooth-dev [!hurd-i386 !kfreebsd-i386 !kfreebsd-amd64], locales [!armel !avr32 !hppa !ia64 !mipsel], libsqlite3-dev, libffi-dev (>= 3.0.5), mime-support, libgpm2 [!hurd-i386 !kfreebsd-i386 !kfreebsd-amd64], netbase, lsb-release, bzip2, libdb4.8-dev, gdb, python, help2man
+Build-Depends: debhelper (>= 5), quilt, autoconf, libreadline-dev, libncursesw5-dev (>= 5.3), zlib1g-dev, libssl-dev, libexpat1-dev, sharutils, libbz2-dev, libbluetooth-dev [!hurd-i386 !kfreebsd-i386 !kfreebsd-amd64], locales [!armel !avr32 !hppa !ia64 !mipsel], libsqlite3-dev, libffi-dev (>= 3.0.5), mime-support, libgpm2 [!hurd-i386 !kfreebsd-i386 !kfreebsd-amd64], netbase, lsb-release, bzip2, libdb4.8-dev, gdb, python, help2man, libgdbm-dev
 Build-Depends-Indep: python-sphinx
-Build-Conflicts: tcl8.3-dev, tk8.3-dev, tcl8.4-dev, tk8.4-dev, @PVER@-xml, python-xml, autoconf2.13
+Build-Conflicts: @PVER@-xml, python-xml, autoconf2.13
 XS-Python-Version: @VER@
 Standards-Version: 3.9.2
 Vcs-Browser: https://code.launchpad.net/~doko/python/pkg@VER@-debian
@@ -73,16 +73,6 @@ Description: Header files and a static library for Python (v@VER@)
  .
  Maintainers of Python packages should read README.maintainers.
 
-Package: idle-@PVER@
-Architecture: all
-Depends: @PVER@, python-tk (>= 2.6~a3), @PVER@-tk, ${misc:Depends}
-Enhances: @PVER@
-Replaces: @PVER@ (<< 2.6.1-2)
-XB-Python-Version: @VER@
-Description: An IDE for Python (v@VER@) using Tkinter
- IDLE is an Integrated Development Environment for Python (v@VER@).
- IDLE is written using Tkinter and therefore quite platform-independent.
-
 Package: @PVER@-doc
 Section: doc
 Architecture: all
@@ -109,7 +99,7 @@ Section: debug
 Architecture: any
 Priority: extra
 Depends: @PVER@ (>= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
-Suggests: python-gdbm-dbg, python-tk-dbg
+Suggests: python-gdbm-dbg
 Description: Debug Build of the Python Interpreter (version @VER@)
  Python interpreter configured with --pydebug. Dynamically loaded modules are
  searched in /usr/lib/@PVER@/lib-dynload/debug first.
